--- a/english/word/low-frequency/073-078.md
+++ b/english/word/low-frequency/073-078.md
@@ -22,15 +22,14 @@
 - deed
     - n. 行为
     - do good deeds 做好事
-- absolutely
+- absolutely [ˈæbsəluːtli]
     - adv. 绝对地
-    - absolutist
+    - absolutist ['æbsəlutɪst]
         - adj. 专制的
         - n. 专制主义者
 - lameness
     - n. 软弱无力
-    - Her critique of **lameness** of many public-health campaigns is spot-on... 她对许多公共卫生运动的不足之处的批评是正确的。
-        - A of B of C C的B的A
+    - Her critique of **lameness** of many public-health campaigns is spot-on... 她对许多公共卫生运动的不足之处的批评是正确的
     - lame adj. 跛脚的，蹩脚的观点
 - unknowable
     - adj. 无法知道的
@@ -48,24 +47,24 @@
     - n. 决心
 - instill
     - vt. 逐渐灌输
-    - I aim to **instill** in then the pleasure of giving.
+    - I aim to **instill** in them the pleasure of giving.
 - reputable
     - adj. 声望好的
     - reputation 🙂 n. 名誉；名声
 
 ## 074
 
-- certificate
+- certificate [sərˈtɪfɪkeɪt]
     - n. 证书
 - precondition
     - n. 先决条件
     - precondition of/for ...的先决条件
 - inaccessible
     - adj. 难以达到的
-- arrogance
+- arrogance [ˈærəɡəns]
     - n. 傲慢
     - arrogant adj. 傲慢的
-- hasten
+- hasten [ˈheɪsn]
     - v. 促进
     - haste [heɪst]
         - n. 匆忙，急忙; 急速，紧迫; 轻率
@@ -80,26 +79,26 @@
         - in mounting numbers 越来越多的
             - == an increasing number of people
             - == a rising number of people
-    - Mount Everest 珠穆朗玛峰
-- startling
+    - Mount Everest(['evərəst]) 珠穆朗玛峰
+- startling  [ˈstɑːrtlɪŋ]
     - adj. 让人震惊的
 - overhead
-    - n.[pl.] 管理费
+    - n. [pl.] 管理费；运营费用
     - adj. 头顶上的
     - adv. 在空中
     - **Overhead** may be high and circulation lower...
 
 ## 075
 
-- bombing
+- bombing [ˈbɑmɪŋ]
     - n. 轰炸
-- ruthless
+- ruthless [ˈruːθləs]
     - adj. 无情的
-- muscular
+- muscular [ˈmʌskjələr]
     - adj. 肌肉的
 - promptly
     - adv. 及时地
-- worship
+- worship [ˈwɜːrʃɪp]
     - v. 敬奉
     - money worship 拜金主义
     - idol worship 偶像崇拜
@@ -111,9 +110,9 @@
         - v. 贡献；有助于；是...的原因之一；捐献
         - contribute to 导致；贡献
             - == lead to == cause
-- terminator
+- terminator ['tɜməˌneɪtə]
     - n. 终止者
-- exclaim
+- exclaim [ɪkˈskleɪm]
     - v. （因惊讶或兴奋）呼喊
     - exclamation [ˌɛkskləˈmeʃən] n. 惊叫; 感叹（词）
 
@@ -121,65 +120,68 @@
 
 - invalid
     - adj. 无效的
-    - People with **invalid** papers are deported to another country.
+    - People with **invalid** papers are *deported([dɪˈpɔːrt] v. 驱逐出境)* to another country.
 - breed
     - vt. 养育
 - emptiness
     - n. 空虚
-- arbitrary
+- arbitrary [ˈɑːrbɪtreri]
     - adj. 武断的
-    - He makes unpredictable, **arbitrary** decisions
-- marginal
+    - He makes unpredictable, **arbitrary** decisions.
+- marginal [ˈmɑːrdʒɪnl]
     - adj. 不重要的
 - rebalance
     - vt. 再平衡
-- sharply
-    - adv. 急剧的
+- sharply [ˈʃɑrpli]
+    - adv. 急剧地
     - sharpness n. 锐利度
     - sharpen [ˈʃɑːrpən]
         - v. 使变锋利
         - vt. 加强
         - == improve
         - sharpen the skill
-- diffusionist
+- diffusionist [dɪ'fjuʒənɪst]
     - n. （文化）传播论者
-- propaganda
+- propaganda [ˌprɑːpəˈɡændə]
     - n. 宣传
 
 ## 077
 
-- gear
+- gear [ɡɪr]
     - vt. 使适合于
     - The high-schoolers get the same curriculum, but "we try to **gear** lessons toward thing they're interested in..."
-- overjoyed
+- overjoyed [ˌoʊvərˈdʒɔɪd]
     - adj. 极为高兴的
-- mercy
+- mercy [ˈmɜːrsi]
     - n. 仁慈
-    - show (no) mercy for
-    - mercilessly adv. 残忍地
+    - show mercy to sb 对某人仁慈/手下留情
+    - show no mercy to sb 毫不留情/冷酷无情
+    - mercilessly [ˈməsɪlɪslɪ] adv. 残忍地
     - unmercifully adv. 冷酷无情地
-- Catholic
+- Catholic [ˈkæθlɪk]
     - adj. 天主教的
-- captive
+- captive [ˈkæptɪv]
     - adj. 被关押的
     - n. 囚徒
-    - in captivity
-- transcendence
+    - in captivity 被囚禁的/被圈养的
+- transcendence [trænˈsɛndəns]
     - n. 超越
-- hazard
+- hazard [ˈhæzərd]
     - n. 危险
-- advent
+- advent [ˈædvent]
     - n. 出现
     - Even after the **advent** of widespread social media, a pyramid of production remains...
+        - even after... 即使在...之后，仍然...
+        - the advent of + noun ...的出现/问世/到来（通常指重大、具有时代意义的事物）
         - pyramid [ˈpɪrəmɪd] n. 呈金字塔形的组织或系统
 
 ## 078
 
-- benign 🙂
+- benign [bɪˈnaɪn] 🙂
     - adj. 良性的
-- perpetual
+- perpetual [pərˈpetʃuəl]
     - adj. 无限的
-    - == continuous
+    - == continuous [kənˈtɪnjuəs] adj. 持续的
     - Nothing seems to dampen his **perpetual** enthusiasm.
         - dampen [ˈdæmpən]
             - vt. 抑制
@@ -194,23 +196,23 @@
         - n. 内容
 - jointly
     - adv. 共同地
-- pharmaceutical
+- pharmaceutical [ˌfɑːrməˈsuːtɪkl]
     - adj. 制药的
-- resemblance
+- resemblance [rɪˈzembləns]
     - n. 相似
     - There was a remarkable **resemblance** between his and Pete.
     - resemble [rɪˈzembl]
         - vt. 像
         - == (be) similar to
         - A resemble B A与B有相似之处
-- intimacy
+- intimacy [ˈɪntɪməsi]
     - n. 亲密
     - intimate [ˈɪntɪmeɪt] adj. 紧密的
 - frequency
     - n. 频率
 - enlarge
     - v. 扩大
-- abdomen
+- abdomen [ˈæbdəmən]
     - n. 腹部
 
 ## Words
