--- a/english/word/low-frequency/079-084.md
+++ b/english/word/low-frequency/079-084.md
@@ -19,48 +19,50 @@
 
 ## 079
 
-- citation
+- citation [saɪˈteʃən]
     - n. 引文
-- burnout
+- burnout [ˈbɜrnaʊt]
     - n. 筋疲力尽
-    - burnable adj. 可燃的
+    - burnable ['bɜneɪbl] adj. 可燃的
 - unlearned
     - adj. 未受教育的
 - entity
     - n. 实体
-- primitive
+- primitive [ˈprɪmətɪv]
     - adj. 原始的
 - characterization
     - n. 描述
 - convincingly
     - adv. 令人信服地
-- harness
+- harness [ˈhɑːrnɪs]
     - vt. 利用
-    - // TODO
-- moisture
+- moisture [ˈmɔɪstʃər]
     - n. 水分
 
 ## 080
 
-- disclaim
+- disclaim [dɪsˈkleɪm]
     - vt. 否认
-- dimensional
+- dimensional [dɪˈmɛnʃənl]
     - adj. 空间的
     - dimension [dɪˈmenʃn] n. 维度；方面
-- perceptive
+- perceptive [pərˈseptɪv]
     - adj. 有洞察力的
     - perceive [pərˈsiːv] v. 感知；注意到；将...理解为
-- canal
+- canal [kəˈnæl]
     - n. （体内的）管道
-- bizarre
+- bizarre [bɪˈzɑːr]
     - adj. 怪异的
     - == strange [streɪndʒ] adj. 奇怪的，奇异的
     - == odd adj. 任意的；古怪的；奇数的
-- raid
+- raid [reɪd]
     - vt. 突然袭击；突然搜查
     - n. 突然袭击；突然搜查
     - The storage is compounded by federal immigration **raids**, which remove some workers and drive others
       underground.
+        - compound [ˈkɑːmpaʊnd]
+            - v. 使恶化
+            - n. 混合物；化合物
 - milestone
     - n. 里程碑，重大事件
     - Remember to celebrate **milestones** as you prepare for the road ahead.
@@ -68,38 +70,43 @@
     - vt. 撤销
 - inexpressible
     - adj. 无法形容的
+    - expressible adj. 可表达的
+    - express [ɪkˈspres]
+        - vt. 表达
+        - n. 快递服务
+        - adj. 明确的；特快的
 - industriousness
-    - n.勤奋
+    - n. 勤奋
     - industry n. 行业，工业
     - industrious [ɪnˈdʌstriəs] adj. 勤劳的，勤奋的
 
 ## 081
 
-- arguably
+- arguably [ˈɑːrɡjuəbli]
     - adv. 可以说
     - argue [ˈɑːrɡjuː] vt. 论证，陈述理由
-- sarcastic
+- sarcastic [sɑːrˈkæstɪk]
     - adj. 挖苦的；尖刻的
-- diabetes
+- diabetes [ˌdaɪəˈbiːtiːz]
     - n. 糖尿病
-- fascism
+- fascism ['fæʃɪzəm]
     - n. 法西斯主义
-- hindrance
+- hindrance [ˈhɪndrəns]
     - n. 阻碍物
     - hinder [ˈhɪndər] vt. 阻碍
-- embed
+- embed [ɪmˈbed]
     - v. （使）嵌入
 - blacken
     - v. （使）变黑
 - carefree
     - adj. 无忧无虑的
-- commercially
+- commercially [kəˈməʃəlɪ]
     - adv. 商业上
     - noncommercial adj. 无经济价值的
 
 ## 082
 
-- hawk
+- hawk [hɔːk]
     - vt. 兜售
 - unfairly
     - adv. 不公正地
@@ -108,19 +115,24 @@
 - enrage
     - vt. 激怒
     - rage [reɪdʒ] n. 愤怒；盛行
-- campaigner
+- campaigner [kæmˈpeɪnər]
     - n. 从事活动者
-- geneticist
+- geneticist [dʒəˈnetɪsɪst]
     - n. 遗传学家
+    - gene [dʒiːn] n. 基因
 - despair
     - vi. 绝望
-- liberalism
+- liberalism [ˈlɪbərəˌlɪzəm]
     - n. 自由主义
-    - liberal [ˈlɪbərəl] adj. 自由党的；人文（教育）的；自由的
-    - liberty n. 自由
+    - liberal [ˈlɪbərəl] adj. 自由的；自由党的；人文（教育）的
+    - liberty [ˈlɪbərti] n. 自由
     - It insists that economic coordination should involve all 27 members of the EU club, among whom there is a small
       majority for free-market **liberalism** and economic rigour...
-    - liberalise
+        - a small majority 略占多数
+        - for prep. 立场，倾向，支持的一方 -> 支持；赞成（在政治/立法/立场语境下 for = 支持；赞成）
+            - voters for the policy 支持该政策的选民
+            - majority for independence 支持独立的多数
+    - liberalise ['lɪbərəlaɪz]
         - vt. 放宽对...的限制
         - After all, other countries, such as Australia and Britain, have started **liberalizing** their legal
           professions.
@@ -132,20 +144,20 @@
 - insider
     - n. 内部人员
     - outsider n. 门外汉；外人；局外人
-- tremble
+- tremble [ˈtrembl]
     - vi. 颤抖
-- conceivably
+- conceivably [kən'sivəblɪ]
     - adv. 可以想象的是
-    - conceive [kənˈsiːv] v. 想象，构想; 认为
     - == perhaps adv. 也许
+    - conceive [kənˈsiːv] v. 想象，构想; 认为
 - reschedule
     - vt. 重新安排
     - == rearrange vt. 重新安排; 重新布置; 改变既定的（计划等）
-- infect
+- infect [ɪnˈfekt]
     - vt. 传染（疾病）给
-- repertoire
+- repertoire [ˈrepərtwɑːr]
     - n. 全部剧目
-- Buddhist
+- Buddhist [ˈbʊdɪst]
     - adj. 佛教的
 - toothless
     - adj. 无牙齿的
@@ -161,25 +173,28 @@
     - correct
         - vt. 改正，纠正
         - adj. 正确的，对的
-- solidarity
+- solidarity [ˌsɑːlɪˈdærəti]
     - n. 团结
     - == unity [ˈjuːnəti] n. 团结，统一；和睦，和谐
     - Durkheim proposed that religious beliefs functioned to reinforce social **solidarity**.
-- agitate
+        - social solidarity 社会凝聚力；社会团结
+        - religious beliefs 宗教信仰
+        - reinforce vt. 强化；巩固
+- agitate [ˈædʒɪteɪt]
     - v. 使焦虑不安
-- organism
+- organism [ˈɔːrɡənɪzəm]
     - n. 有机体
-    - organic adj. // TODO（有机体）的
+    - organic adj. 有机（体）的
     - organizational adj. 组织的
     - disorganized adj. 杂乱无章的
 - thinness
     - n. 瘦
-- prestigious
+- prestigious [preˈstɪdʒəs]
     - adj. 有声望的
-    - == well-known adj. 众所周知的，著名的
-    - == famous
+    - == well-known adj. 众所周知的，著名的 == famous adj. 著名的，出名的
     - so honored to be admitted to one of the world's most **prestigious** universities.
     - I would be so honored to be admitted to one of most **prestigious** universities in China.
+        - be admitted to 被...录取
 - unavoidable
     - adj. 无法避免的
 
