--- a/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_function_limits.tex
@@ -249,8 +249,8 @@
             \end{circlenum}
             \item 带帽非严格不等
             \begin{circlenum}
-                \item $f \geq 0 \Rightarrow \lim f \geq 0$
-                \item $f \leq 0 \Rightarrow \lim f \leq 0$
+                \item $f > 0 \Rightarrow \lim f \geq 0$
+                \item $f < 0 \Rightarrow \lim f \leq 0$
             \end{circlenum}
         \end{itemize}
     \end{enumerate}
