--- a/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
@@ -148,14 +148,14 @@
             + \frac{f^{(n)}(a)}{n!}(x-a)^n + o(x^n)
         \]
         \begin{itemize}
-            \item $\displaystyle \sin x = x - \frac{x^3}{3!} + o(x^3) \Rightarrow \text{狗} - \sin \text{狗} \sim \frac{\text{狗}^3}{6}, \quad \text{狗}\to 0$
+            \item $\displaystyle \sin x = x - \frac{x^3}{6} + o(x^3) \Rightarrow \text{狗} - \sin \text{狗} \sim \frac{\text{狗}^3}{6}, \quad \text{狗}\to 0$
             \item $\displaystyle \arcsin x = x + \frac{x^3}{6} + o(x^3) \Rightarrow \arcsin \text{狗} - \text{狗} \sim \frac{\text{狗}^3}{6}, \quad \text{狗}\to 0$
-            \item $\displaystyle \cos x = 1 - \frac{x^2}{2!} + \frac{x^4}{4!} + o(x^4) \Rightarrow 1 - \cos \text{狗} \sim \frac{\text{狗}^2}{2}, \quad \text{狗}\to 0$
+            \item $\displaystyle \cos x = 1 - \frac{x^2}{2} + \frac{x^4}{4!} + o(x^4) \Rightarrow 1 - \cos \text{狗} \sim \frac{\text{狗}^2}{2}, \quad \text{狗}\to 0$
             \item $\displaystyle \tan x = x + \frac{1}{3}x^3 + o(x^3) \Rightarrow \tan \text{狗} - \text{狗} \sim \frac{\text{狗}^3}{3}, \quad \text{狗}\to 0$
             \item $\displaystyle \arctan x = x - \frac{x^3}{3} + o(x^3) \Rightarrow \text{狗} - \arctan \text{狗} \sim \frac{\text{狗}^3}{3}, \quad \text{狗}\to 0$
-            \item $\displaystyle e^x = 1 + x + \frac{x^2}{2!} + \frac{x^3}{3!} + o(x^3) \Rightarrow e^{\text{狗}} - 1 - \text{狗} \sim \frac{\text{狗}^2}{2}, \quad \text{狗}\to 0$
+            \item $\displaystyle e^x = 1 + x + \frac{x^2}{2} + \frac{x^3}{6} + o(x^3) \Rightarrow e^{\text{狗}} - 1 - \text{狗} \sim \frac{\text{狗}^2}{2}, \quad \text{狗}\to 0$
             \item $\displaystyle \ln(1+x) = x - \frac{x^2}{2} + \frac{x^3}{3} + o(x^3) \Rightarrow \text{狗} - \ln(1+\text{狗}) \sim \frac{\text{狗}^2}{2}, \quad \text{狗}\to 0$
-            \item $\displaystyle (1+x)^a = 1 + ax + \frac{a(a-1)}{2!}x^2 + o(x^2) \Rightarrow (1+\text{狗})^a - 1 - a\text{狗} \sim \frac{a(a-1)}{2}\text{狗}^2, \quad \text{狗}\to 0$
+            \item $\displaystyle (1+x)^a = 1 + ax + \frac{a(a-1)}{2}x^2 + o(x^2) \Rightarrow (1+\text{狗})^a - 1 - a\text{狗} \sim \frac{a(a-1)}{2}\text{狗}^2, \quad \text{狗}\to 0$
             \item $\displaystyle \frac{1}{1+x^2} = 1 - x^2 + x^4 + o(x^4)$
         \end{itemize}
         \item \textbf{无穷小计算（记号运算）}：设 $m,n$ 为正整数，$x\to 0$，则
