--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -14,6 +14,7 @@
 \usepackage{pgfplots}
 \usepackage{enumitem}
 \usepackage{pifont}
+\usepackage{ulem}
 \pgfplotsset{compat=1.18}
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
@@ -43,6 +44,8 @@
     leftmargin=2.2em,
     itemsep=0.4em
 }
+
+\newcommand{\blueuline}[1]{{\color{blue}\uline{\color{black}{#1}}}}
 
 % =========================
 % 字体设置
