--- a/english/word/low-frequency/061-066.md
+++ b/english/word/low-frequency/061-066.md
@@ -49,8 +49,12 @@
     - millennial [mɪˈleniəl] n. 千禧一代（1982-1995）
 - observatory [əbˈzɜːrvətɔːri]
     - n. 天文台
-    - *Protests(n. 抗议)* have *erupted([ɪˈrʌpt] v. 喷发; 爆发)* over construction of the Thirty Meter Telescope(TMT), a
+    - Protests have erupted over construction of the Thirty Meter Telescope(TMT), a
       giant **observatory** that promises to revolutionize humanity's view of the *cosmos([ˈkɑːzmoʊs] n. 宇宙)*.
+        - protest
+            - vt. 抗议
+            - n. 抗议
+        - erupt [ɪˈrʌpt] vi. 爆发
         - erupt over sth 因...而爆发（争议/冲突）
         - promise(s) to do sth 有望...；预示着...
         - revolutionize one's view of... 彻底改变某人对...的看法/认知
@@ -213,7 +217,7 @@
 - elegance
     - n. 优雅
 - idleness
-    - v. 懒
+    - n. 懒
     - == lazy adj. 懒散的
 - trivial [ˈtrɪviəl]
     - adj. 不重要的，琐碎的
