--- a/english/word/low-frequency/067-072.md
+++ b/english/word/low-frequency/067-072.md
@@ -176,7 +176,7 @@
 - instrumentalist [ˌɪnstrəˈmɛntlɪst]
     - n. 乐器演奏家
     - instrument [ˈɪnstrəmənt] n. 仪器，器械，工具；乐器
-    - instrumentally [,ɪnstrə'mɛntli] adv. 有助益地；用乐器演奏地
+    - instrumentally [,ɪnstrə'mɛntli] adv. 有益地；用乐器演奏地
 - glow
     - n. 微弱而稳定的光
     - glowingly ['ɡloʊɪŋlɪ] adv. 热情地
