--- a/english/word/low-frequency/055-060.md
+++ b/english/word/low-frequency/055-060.md
@@ -214,7 +214,7 @@
     - n. 协定
 - adolescence [ˌædəˈlesns]
     - n. 青春（期）
-- surplus [ˈsɜːrplʌs]
+- urplus [ˈsɜːrplʌs]
     - adj. 剩余的
     - n. 剩余；多余
     - == excess
