--- a/english/word/low-frequency/073-078.md
+++ b/english/word/low-frequency/073-078.md
@@ -79,7 +79,7 @@
         - in mounting numbers 越来越多的
             - == an increasing number of people
             - == a rising number of people
-    - Mount Everest(['evərəst]) 珠穆朗玛峰
+    - Mount *Everest(['evərəst])* 珠穆朗玛峰
 - startling  [ˈstɑːrtlɪŋ]
     - adj. 让人震惊的
 - overhead
