--- a/english/word/low-frequency/085-090.md
+++ b/english/word/low-frequency/085-090.md
@@ -21,73 +21,99 @@
 
 - unaware
     - adj. 不知道的
-    - be aware of sth.
+    - be aware of sth. 意识到；察觉到；知道（某事的存在或重要性）
 - overprotective
     - adj. 过分保护的
-- negligence
+- negligence [ˈneɡlɪdʒəns]
     - n. 疏忽
-    - neglect v. 忽视
-- articulate
+    - neglect [nɪˈɡlekt]
+        - vt. 疏于照顾；不予重视
+        - n. 忽视
+- articulate [ɑːrˈtɪkjuleɪt]
     - vt. 清楚地表达
+    - adj. 口齿伶俐的
     - inarticulate adj. 不善言辞的
-- bewildering
+- bewildering [bɪˈwɪldərɪŋ]
     - adj. 令人困惑的
-    - As the deadline approached she experienced a bewildering array of emotions.
-    - == confusing
-- pray
+    - == confusing adj. 难以理解的
+    - As the deadline approached she experienced a **bewildering** array of emotions.
+        - experience [ɪkˈspɪriəns]
+            - v. 经历; 感受
+            - n. 经验; 经历; 往事
+- pray [preɪ]
     - v. 祈祷
     - prayer n. 祈祷
 - unaffordable
     - adj. 担负不起的
-    - First,Europe is not alone in enjoying an unaffordable lifestyle.
-    - afford
-- solvable
+    - First, Europe is not alone in enjoying an **unaffordable** lifestyle.
+    - afford vt. 买得起；给予，提供(PE)；承担得起（后果）
+- solvable ['sɒlvəbəl]
     - adj. 可解决的
-    - solve
+    - solve v. 解决
 
 ## 086
 
-- shrug
+- shrug [ʃrʌɡ]
     - v. 耸肩（表示不知道或不在乎）
-    - shrug off 对...不满意,不屑一顾
-    - German and Brazilian papers have shrugged off the recession.
-- vacuum
+    - German and Brazilian papers have **shrugged** off the recession. 德国和巴西的报纸成功地挺过了经济衰退，几乎没有受到影响
+        - shrug off 对不利事物不以为意；摆脱；挺过去
+        - have shrugged off（现在完成时） 👉 表示：从衰退中走出来，影响已消失
+- vacuum [ˈvækjuːm]
     - n. 真空
-- swamp
+- swamp [swɑːmp]
     - v. 淹没
-- consumerism
+- consumerism [kənˈsuːmərɪzəm]
     - n. 消费主义
 - feat
     - n. 业绩
+    - Being brilliant is no great **feat** if you respect nothing. 如果你不尊重任何东西，聪明/才华横溢并不是什么了不起的成就
+        - brilliant [ˈbrɪliənt] adj. 巧妙的; 使人印象深的; 聪颖的; 技艺高超的; 非常好的; 成功的; 鲜明的; 明亮的; 灿烂的
+        - no great feat 不是什么了不起的事；没什么值得夸耀的
+    - Man's first landing on the moon was a **feat** of great daring.
+        - daring [ˈderɪŋ]
+            - adj. 胆大的，勇敢的
+            - n. 胆量，勇气
+
 - relay
     - vt. 接转
-- shove
-    - b. 猛推
-- scattered
+- shove [ʃʌv]
+    - v. 猛推
+- blaze [bleɪz]
+    - vi. 燃烧
+    - n. 火焰
+- scattered [ˈskætərd]
     - adj. 分散的
-- softener
+    - At the first gunshot, the crowd **scattered**.
+- softener [ˈsɔfnə(r)]
     - n. 软化剂
 
 ## 087
 
-- sake
+- sake [seɪk]
     - n. 理由
-    - for the sake of sth./sb
+    - for the sake of sth./sb 为了...的利益/出于对...的考虑/为了...本身
 - systemic
     - adj. 涉及全系统的
-    - systematicness n. 系统性
-- discriminate
+    - systematicness [sɪstə'mætɪknes] n. 系统性
+- discriminate [dɪˈskrɪmɪneɪt]
     - vi. 歧视
-    - discrimination n. 歧视
-- doubter
+    - discrimination [dɪˌskrɪmɪˈneɪʃn] n. 歧视
+    - But it has already sparked significant controversy, with the United States Trade Representative opening an
+      investigation into whether the tax **discriminates** against American companies...
+        - controversy [ˈkɑːntrəvɜːrsi] 😔 n. （公开的）争论
+        - representative [ˌreprɪˈzentətɪv]
+            - n. 代表，代理人
+            - adj. 典型的，有代表性的；代议制的
+        - United States Trade Representative 美国贸易代表
+- doubter [daʊtə(r)]
     - n. 持怀疑态度的人
     - undoubted adj. 毋庸置疑的
-- efficiently
+- efficiently [ɪˈfɪʃəntlɪ]
     - adv. 有效地
-- naturalist
+- naturalist [ˈnætʃərəlɪst]
     - n. 博物学家
-    - naturalization n. 乳国籍
-    - naturalistic adj. 顺从自然的
+    - naturalization n. 入国籍；归化
+    - naturalistic [ˌnætʃrəˈlɪstɪk] adj. 顺从自然的
 
 ## 088
 
@@ -95,22 +121,26 @@
     - n. 鼓舞
 - remake
     - vt. 再建
-- cement
-    - vt. 加强
-- scarcely
+- cement  [sɪˈment]
+    - v. 加强，巩固🙂；使...停滞不前😔
+    - n. 水泥
+- scarcely [ˈskersli]
     - adv. 勉强
-- trainee
+- trainee [ˌtreɪˈniː]
     - n. 实习生
-- concede
+- concede [kənˈsiːd]
     - vt. （不得不）承认
-    - have to commit
-- concession
+    - == have to admit (that...)  不得不承认.../不能不承认...
+- concession [kənˈseʃn]
     - n. 让步
     - make more concessions 做出更多让步
-- assurance
+- assurance [əˈʃʊrəns]
     - n. 自信；担保
-    - But take a longer view and there is a surprising amount that we can <ins>say with considerable assurance. (
-      相当肯定的说)</ins>
+    - But take a longer view and there is a surprising amount that we can say with considerable **assurance**.
+      但是如果从更长远的角度来看，我们其实可以相当有把握地说出不少结论
+        - take a longer/long-term/broader view 从更长远；更宏观的角度看
+        - with considerable assurance 相当有把握地/颇为确定地
+    - There is anything but an **assurance** of success, I have to be very clear about that.
 - inexperienced
     - adj. 缺乏认识（或经验）的
 - habitual [həˈbɪtʃuəl]
@@ -118,61 +148,81 @@
 
 ## 089
 
-- gathering
+- gathering [ˈɡæðərɪŋ]
     - n. 聚会
-    - I was addressing a small gathering in a suburban Viginia living room-a women's grop that had invited men to join
-      them.
-        - address v. 解决
-- slump
-    - n. 暴跌😔
-- blunt
+    - I was addressing a small **gathering** in a suburban Viginia living room-a women's group that had invited men to
+      join them.
+        - address
+            - vt. 设法解决；演讲
+            - n. 地址；致辞
+        - suburban [səˈbɜːrbən] adj. 郊区的
+- slump [slʌmp] 😔
+    - n. 暴跌
+- blunt [blʌnt]
     - vt. 使变钝
-- structural
+- structural [ˈstrʌktʃərəl]
     - adj. 结构性的
-- resent 😔
+- resent [rɪˈzent] 😔
     - vt. 对...感到愤怒
-    - resentment n. 怨恨
-- stroke
+    - resentment [rɪˈzɛntmənt] n. 怨恨
+- stroke [stroʊk]
     - n. 游泳姿势
 - blueprint
     - n. 蓝图
     - == plan
-- deductible
+    - Any system or **blueprint** for success is better than none at all think on paper.
+        - better than none at all 总比完全没有好
+        - on paper 在理论上；在纸面上；在计划层面
+- deductible [dɪˈdʌktəbl]
     - n. 免赔额
 - inventive
     - adj. 有创造力的
-- illogical
+- illogical [ɪˈlɑdʒɪkl]
     - adj. 不合逻辑的
 
 ## 090
 
-- implausible
-    - adj. 似乎不合情理的
-- veg
+- implausible [ɪmˈplɔzəbəl]
+    - adj. 难以置信的；不切实际；似乎不合情理的
+    - plausible [ˈplɔːzəbl] adj. 貌似合理的；可信的
+- veg [vedʒ]
     - n. 蔬菜
-    - vegetable
-- agony
+    - == vegetable
+- agony [ˈæɡəni]
     - n. 极大的痛苦
-    - pain
+    - == pain
+    - in agony 处于极度痛苦中（身体或精神）
 - endlessly
     - adv. 无穷地
-- synthetic
+- synthetic [sɪnˈθetɪk]
     - adj. 人造的
-- ally
+- ally [ˈælaɪ]
     - n. 盟友，同盟国
-- symphony
+- symphony [ˈsɪmfəni]
     - n. 交响曲
-- symphony
-    - n. 交响曲
-- conspiracy 😔
+- conspiracy [kənˈspɪrəsi] 😔
     - n. 密谋
-- feudalism
+    - conspire [kənˈspaɪər] v. 密谋，共谋; 共同导致（不良后果）
+- feudalism [ˈfjudlˌɪzəm]
     - n. 封建主义
-- fleeting
+- fleeting [ˈflitɪŋ]
     - adj. 短暂的
-    - fleeting moments 飞逝的瞬间
+    - Think of those **fleeting** moments when you look out of an aeroplane window and realise that you are flying,
+      higher than a bird.
+        - fleeting moments 飞逝的瞬间
+        - realise ['rɪrlaɪz] v. 理解，意识到; 获得; 实现; 发生; 变卖
 
 ## Words
+
+- caution [ˈkɔːʃn]
+    - n. 谨慎；警告
+- sacrifice [ˈsækrɪfaɪs]
+    - n. 牺牲；献祭
+    - vt. 牺牲；献祭
+- nurture [ˈnɜːrtʃər]
+    - v. 培养
+    - n. 培养
+    - nature [ˈneɪtʃər] n. 本质，实质；天性；自然
 
 ## 词组
 
