--- a/english/word/low-frequency/105-112.md
+++ b/english/word/low-frequency/105-112.md
@@ -27,7 +27,7 @@
 - ethically
     - adv. 伦理地，道德地
     - ethical crisis 伦理危机
-- suburban
+- suburban [səˈbɜːrbən]
     - adj. 郊区的
     - urban 城市的
 - conform
