--- a/english/word/low-frequency/091-096.md
+++ b/english/word/low-frequency/091-096.md
@@ -24,16 +24,17 @@
     - recreation n. 娱乐
 - albeit
     - conj. 尽管
-    - He finally agreed，albeit reluctantly to help us.
+    - He finally agreed, **albeit** reluctantly, to help us.
 - supplier
     - n. 供货商
 - oxide
     - n. 氧化物
-    - carbon dioxide 二氧化碳
+    - carbon di**oxide** 二氧化碳
 - vulnerability
     - n. 易损性
-    - A baby is <ins>the embodiment of (...的化身)</ins> vulnerability.
-    - vulnerable
+    - A baby is <ins>the embodiment of(...的化身)</ins> **vulnerability**.
+        - embodiment n. 集中体现
+    - vulnerable [ˈvʌlnərəbl] adj. 脆弱的；易受伤害的
 - unnamed
     - adj. 不知其名的
 - stern
@@ -42,6 +43,7 @@
     - n. 展示
 - rivalry
     - n. 竞争
+    - == competition [ˌkɑːmpəˈtɪʃn] n. 竞争
 
 ## 092
 
@@ -51,17 +53,22 @@
     - n. （建筑物内的）楼梯
 - alteration
     - n. 改动
+    - alter v. 更改
 - physiology
     - n. 生理机能
     - physiologist n. 生理学家
     - psychology n. 心理学
 - comprise
     - vt. 由...组成
+    - == be made up of
+    - Older people **comprise** a large proportion of those living in poverty.
     - comprise of
 - habitation
     - n. 住所
 - relevance
     - n. 关联
+    - irrelevance [ɪˈrɛləvəns] n. 无关紧要; 不相关; 不相关的事物
+    - Politicians' private lives have no **relevance** to their public roles.
 - packet
     - n. 一大笔钱
 - contemptible
@@ -75,11 +82,11 @@
 - nuisance
     - n. 妨害行为
 - harmony
-    - n. (音乐)和声
+    - n. (音乐)和声；融洽
     - be harmony with
 - purifier
     - n. 净化器
-    - pure 纯粹的
+    - pure [pjʊr] n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的
 - integration
     - n. 融合
     - disintegrate vi. 分解
@@ -87,16 +94,20 @@
         - save sth. from disintegration 拯救...免于解体
 - dependence
     - n. 依赖
-    - independence n. 互相依赖
+    - interdependence n. 互相依赖
+    - This entails reducing our **dependence** on the North American market...
 - sin
     - n. 罪
 
 ## 094
 
-- bureaucra
+- bureaucrat
     - n. 官僚
-    - bureaucracy n. 官僚体质
-    - A bureaucracy is an organization made up of many departments and divisions that are administered by lots of People.
+    - bureaucracy n. 官僚体制；官僚作风
+    - A **bureaucracy** is an organization made up of many departments and divisions that are administered by lots of
+      People.
+    - If you've ever had to deal with health insurance or financial aid, you're familiar with the dark side of
+      **bureaucracy**.
 - escapism
     - n. 逃避主义
 - ingredient
@@ -106,7 +117,7 @@
 - summon
     - vt. 召唤
 - assembly
-    - n. 组装
+    - n. 组装；议会；集会
     - assemble v. 集合，集结
 - entitlement
     - n. 权力
@@ -114,7 +125,7 @@
     - vt. 重新唤起
 - underestimation
     - n. 低估
-    - overestimation 高估
+    - overestimation n. 高估
 
 ## 095
 
@@ -124,6 +135,7 @@
     - adapt to 适应
 - lifeblood
     - n. 命脉
+    - Tourism is the **lifeblood** of the city.
 - unthinkable
     - adj. 难以想象的
 - poke
@@ -136,10 +148,11 @@
     - adj. 宽敞的
 - suck
     - v. 吸
-    - Tech is designed to really suck you in.
+    - Tech is designed to really **suck** you in.
         - suck in 吸引
-- threadshold
+- threshold
     - n. 门槛
+    - setting a high age **threshold** for models.
 
 ## 096
 
@@ -149,8 +162,8 @@
     - vt. 偷偷携带
 - ecologically
     - adv. 从生态的观点看
-    - ecology
-- instantangeous
+    - ecology [iˈkɑːlədʒi] n. 生态，生态学
+- instantaneous
     - adj. 即时的
 - centrepiece
     - n. 最重要的部分
@@ -161,9 +174,10 @@
     - misguided adj. 错误的
 - tile
     - vt. 铺地砖
+    - I am writing to recommend the Forbidden City, every brick and **tile** of which embodies the craftsmanship spirit
+      of our country. 我写信是为了推荐故宫，故宫里的一砖一瓦都体现了我们国家的工匠精神。
 - bribe
     - vt. 贿赂
-- I am writing to recommend the Forbidden City，every brick and tile of which embodies the craftsmanship spirit of our country. 我写信是为了推荐故宫，故宫里的一砖一瓦都体现了我们国家的工匠精神。
 
 ## Words
 
